puma1 : cp_intc: remove unnecessary code
Source: MontaVista Software, LLC
MR: 105465
Type: Integration
Disposition: Local
ChangeID: 726c16f73da6982135f0d4056e79c688ad6d110c
Description:

Enabling and disabling of the interrupts is done at the descriptor
level and should not be tracked in an irq chip driver.

Use indexed operations for mask, unmask and ack.

Use fasteoi handler for level interrupts since cpintc device
requires the level interrupts to be acknowledged after the source of
the irq has been cleared.

Change all Puma1 internal interrupts to edge triggered in dtb since
they are pulses and not levels.

Use pending bit in the global prioritized index register to
check for pending interrupt in entry-macro.S.

Rename CLOCKSOURCE_OF to TIMER_OF since that has been done in the
upstream and CLOCKSOURCE_OF_DECLARE will be removed in the future (see
commit 8b7a3b5). Remove .init_time from DT_MACHINE_START so that we
use the architecture default time_init() from arch/arm/kernel/time.c
that will initialize our TIMER_OF_DECLAREed puma1_timer correctly

Signed-off-by: A. Niyas Ahamed Mydeen <nmydeen@mvista.com>
Reviewed-by: Purushothama Siddaiah <psiddaiah@mvista.com>
Signed-off-by: Armin Kuster <akuster@mvista.com>

--- a/arch/arm/boot/dts/puma1.dts
+++ b/arch/arm/boot/dts/puma1.dts
@@ -38,7 +38,7 @@
 		intc: interrupt-controller {
 			compatible = "ti,cp-intc";
 			interrupt-controller;
-			#interrupt-cells = <1>;
+			#interrupt-cells = <2>;
 			ti,intc-size = <56>;
 			reg = <0x68000000 0x2000>;
 		};
@@ -49,7 +49,7 @@
 			reg = <0x65000000 0x1000>,
 				<0x66000000 0x1000>;
 			interrupt-parent = <&intc>;
-			interrupts = <14>, <15>, <16>, <17>;
+			interrupts = <14 1>,<15 1>, <16 1>, <17 1>;
 		};
 
 		wdt@67000000 {
@@ -62,7 +62,7 @@
 			clock-frequency = <100000000>;
 			reg-shift = <2>;
 			interrupt-parent = <&intc>;
-			interrupts = <18>;
+			interrupts = <18 1>;
 		};
 
 		nand0: nand@81000000 {
@@ -111,7 +111,7 @@
 			bus-frequency = <150000>;
 			bus-delay = <20>;
 			interrupt-parent = <&intc>;
-			interrupts = <19>;
+			interrupts = <19 1>;
 
 			lm75: lm75@49 {
 				compatible = "national,lm75";
@@ -173,7 +173,7 @@
 			device_type = "network";
 			reg = <0x63000000 0x302000>;
 			interrupt-parent = <&intc>;
-			interrupts = <54>, <55>, <2>, <1> ;
+			interrupts = <54 1>, <55 1>, <2 1>, <1 1> ;
 			puma1,ctrl_reg_offset = <0x0100000>;
 			puma1,ctrl_mod_reg_offset = <0x0000000>;
 			puma1,mdio_reg_offset = <0x0200000>;
